--- a/requirements.txt
+++ b/requirements.txt
@@ -17,6 +17,7 @@ python-dotenv==1.0.1
 
 # testing
 pytest==8.0.0
+pytest-cov==6.1.1
 Faker==22.5.0
 factory-boy==3.3.0
 
@@ -25,3 +26,4 @@ black==24.2.0
 isort==5.13.2
 ruff==0.2.2
 pre-commit==3.6.2
+bandit==1.8.3
