--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -31,7 +31,7 @@ jobs:
       run: black --check .
 
     - name: Run isort (import sorting check)
-      run: isort --check-only .]
+      run: isort --check-only .
 
     - name: Run pytest (unit tests)
       run: pytest
